force-app/main/default/objects/order_line_item__c/order_line_item__c.object-meta.xml
<CustomObject>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OLI-{000000}</displayFormat>
        <label>Order Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>