force-app/main/default/objects/order_line_item__c/fields/Addon_Credit_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Addon_Credit_Utilized__c</fullName>
    <label>Addon Credit Utilized</label>
    <summarizedField>AddOn__c.Credit_Utilized__c</summarizedField>
    <summaryForeignKey>AddOn__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>