force-app/main/default/objects/order_line_item__c/fields/AddOn_Withheld_Amount__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Withheld_Amount__c</fullName>
    <label>AddOn Withheld Amount</label>
    <summarizedField>AddOn__c.Withheld_Amount__c</summarizedField>
    <summaryForeignKey>AddOn__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>