force-app/main/default/objects/order_line_item__c/fields/Addons_Refund__c.field-meta.xml
<CustomField>
    <fullName>Addons_Refund__c</fullName>
    <label>Addons Refund</label>
    <summarizedField>AddOn__c.Addon_Refund_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>AddOn__c.ordexp_approval_status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>AddOn__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>