force-app/main/default/objects/order_line_item__c/fields/AE_accom_number_of_nights__c.field-meta.xml
<CustomField>
    <fullName>AE_accom_number_of_nights__c</fullName>
    <formula>Total_AE_Accom__c  /  Count_AE_Nights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE accom number of nights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>