force-app/main/default/objects/order_line_item__c/fields/Allocation_Recreate__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Recreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocation Recreate</label>
    <type>Checkbox</type>
</CustomField>