force-app/main/default/objects/order_line_item__c/fields/Amt_orig__c.field-meta.xml
<CustomField>
    <fullName>Amt_orig__c</fullName>
    <label>Amt (orig)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>