force-app/main/default/objects/order_line_item__c/fields/Amt_Sur__c.field-meta.xml
<CustomField>
    <fullName>Amt_Sur__c</fullName>
    <label>Amt (Sur)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>