force-app/main/default/objects/order_line_item__c/fields/Arrive_Early_Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Arrive_Early_Number_of_Nights__c</fullName>
    <formula>IF( (Total_AE_Nights__c ==0 || Count_AE_Nights__c==0) , 0, Total_AE_Nights__c  /  Count_AE_Nights__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrive Early Number of Nights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>