force-app/main/default/objects/order_line_item__c/fields/Arrive_Early_required__c.field-meta.xml
<CustomField>
    <fullName>Arrive_Early_required__c</fullName>
    <formula>IF( Total_AE_Nights__c  &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrive Early required</label>
    <type>Checkbox</type>
</CustomField>