force-app/main/default/objects/order_line_item__c/fields/BER_Coupon_Travel_By_Date__c.field-meta.xml
<CustomField>
    <fullName>BER_Coupon_Travel_By_Date__c</fullName>
    <label>BER Coupon Travel By Date</label>
    <type>Date</type>
</CustomField>