force-app/main/default/objects/order_line_item__c/fields/BER_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>BER_Refund_Amount__c</fullName>
    <description>As per what was created in Legacy Order on the Migration 8 sanddbox.</description>
    <label>BER Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>