force-app/main/default/objects/order_line_item__c/fields/BER_Withheld_Value__c.field-meta.xml
<CustomField>
    <fullName>BER_Withheld_Value__c</fullName>
    <label>BER Withheld Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withheld Value Pending - UJ</fullName>
            </value>
            <value>
                <fullName>Withheld Value Pending - Costa</fullName>
            </value>
            <value>
                <fullName>Withheld Value Pending - MSC</fullName>
            </value>
            <value>
                <fullName>Withheld Value Pending - MSC Hold</fullName>
            </value>
            <value>
                <fullName>Withheld Value Pending - MSC Pay Now</fullName>
            </value>
            <value>
                <fullName>Withheld Value Pending - Airline</fullName>
            </value>
            <value>
                <fullName>Withheld Value Pending - Other</fullName>
            </value>
            <value>
                <fullName>Prepayments have been checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>