force-app/main/default/objects/order_line_item__c/fields/BER_Withholding_Amount__c.field-meta.xml
<CustomField>
    <fullName>BER_Withholding_Amount__c</fullName>
    <label>BER Withholding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>