force-app/main/default/objects/order_line_item__c/fields/BER_Withholding_Details__c.field-meta.xml
<CustomField>
    <fullName>BER_Withholding_Details__c</fullName>
    <label>BER Withholding Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>