force-app/main/default/objects/order_line_item__c/fields/Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Amount__c</fullName>
    <label>Cancellation Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>