force-app/main/default/objects/order_line_item__c/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resend Confirmation Email</fullName>
            </value>
            <value>
                <fullName>Resend Merchant Confirmation</fullName>
            </value>
            <value>
                <fullName>Resend Travel Pack</fullName>
            </value>
            <value>
                <fullName>Send POLi Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>