force-app/main/default/objects/order_line_item__c/fields/Consolidated_Field__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Field__c</fullName>
    <formula>Name + &apos; | &apos; + LEFT(Sub_Options__r.Name, (LEN(Sub_Options__r.Name)-5)) + &apos; | &apos;  +TEXT(PAX_Quantity__c)   + &apos; PAX&apos; + &apos; | &apos;  +LEFT(Departure_cities__r.Name, (LEN(Departure_cities__r.Name)-5)) + &apos; - &apos; + Departure_cities__r.ordexp_pincode__c + &apos; | &apos; + TEXT(OLI_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consolidated Field</label>
    <type>Text</type>
</CustomField>