force-app/main/default/objects/order_line_item__c/fields/Consolidated_With_PAX__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_With_PAX__c</fullName>
    <formula>Consolidated_Field__c +&apos;|&apos;+ Pax_Nicknames__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consolidated With PAX</label>
    <type>Text</type>
</CustomField>