force-app/main/default/objects/order_line_item__c/fields/Count_AE_Nights__c.field-meta.xml
<CustomField>
    <fullName>Count_AE_Nights__c</fullName>
    <label>Count AE Nights</label>
    <summaryFilterItems>
        <field>AddOn__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>AE/SB Accommodation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AddOn__c.AE_Nights__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>AddOn__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>