force-app/main/default/objects/order_line_item__c/fields/Coupon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Amount__c</fullName>
    <label>Coupon  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>