force-app/main/default/objects/order_line_item__c/fields/COVID_Revised_Offers__c.field-meta.xml
<CustomField>
    <fullName>COVID_Revised_Offers__c</fullName>
    <label>COVID Revised Offers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>BER Resolution</fullName>
            </value>
            <value>
                <fullName>OriginalOrder To be Revised</fullName>
            </value>
            <value>
                <fullName>This Order To be Revised</fullName>
            </value>
            <value>
                <fullName>Offer Not Changed</fullName>
            </value>
            <value>
                <fullName>Reoffer Open Credit No Fee</fullName>
            </value>
            <value>
                <fullName>Reoffer Open Credit With Fee</fullName>
            </value>
            <value>
                <fullName>Reoffer TADDefer and Open Credit</fullName>
            </value>
            <value>
                <fullName>Reoffer Excl Credit and Open Credit</fullName>
            </value>
            <value>
                <fullName>Payment Transaction Refund Req</fullName>
            </value>
            <value>
                <fullName>Sent - Offer Not Changed</fullName>
            </value>
            <value>
                <fullName>Sent - Reoffer Open Credit No Fee</fullName>
            </value>
            <value>
                <fullName>Sent - Reoffer Open Credit With Fee</fullName>
            </value>
            <value>
                <fullName>Sent - Reoffer TADDefer and Open Credit</fullName>
            </value>
            <value>
                <fullName>Sent - Reoffer Excl Credit and Open Credit</fullName>
            </value>
            <value>
                <fullName>Sent - Payment Transaction Refund Req</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
                <isActive>false</isActive>
                <label>Eligible</label>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
                <isActive>false</isActive>
                <label>Not Eligible</label>
            </value>
            <value>
                <fullName>To Be Revised</fullName>
                <isActive>false</isActive>
                <label>To Be Revised</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>