force-app/main/default/objects/order_line_item__c/fields/COVIDFormID__c.field-meta.xml
<CustomField>
    <fullName>COVIDFormID__c</fullName>
    <label>COVIDFormID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>