force-app/main/default/objects/order_line_item__c/fields/COVIDFormURL__c.field-meta.xml
<CustomField>
    <fullName>COVIDFormURL__c</fullName>
    <formula>HYPERLINK(&apos;https://www.tripadeal.com.au/dform/&apos;&amp; COVIDFormID__c &amp;&apos;?id=&apos; , &apos;Click Here&apos; , &apos;&apos;)</formula>
    <label>COVIDFormURL</label>
    <type>Text</type>
</CustomField>