force-app/main/default/objects/order_line_item__c/fields/Customization_Credit_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Customization_Credit_Utilized__c</fullName>
    <label>Customization Credit Utilized</label>
    <summarizedField>Order_Customisations_POE__c.Credit_Utilized__c</summarizedField>
    <summaryForeignKey>Order_Customisations_POE__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>