force-app/main/default/objects/order_line_item__c/fields/CVC_Exclusives_Supplier__c.field-meta.xml
<CustomField>
    <fullName>CVC_Exclusives_Supplier__c</fullName>
    <label>CVC Exclusives Supplier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>