force-app/main/default/objects/order_line_item__c/fields/DataRefresh__c.field-meta.xml
<CustomField>
    <fullName>DataRefresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DataRefresh</label>
    <type>Checkbox</type>
</CustomField>