force-app/main/default/objects/order_line_item__c/fields/Dep_Date__c.field-meta.xml
<CustomField>
    <fullName>Dep_Date__c</fullName>
    <formula>ordexp_departure_date__r.date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dep Date</label>
    <type>Date</type>
</CustomField>