force-app/main/default/objects/order_line_item__c/fields/Departure_cities__c.field-meta.xml
<CustomField>
    <fullName>Departure_cities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure cities</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>departure_cities__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>departure_cities__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items_dc</relationshipName>
    <type>Lookup</type>
</CustomField>