force-app/main/default/objects/order_line_item__c/fields/DepCityLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>DepCityLastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DepCityLastModifiedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>