force-app/main/default/objects/order_line_item__c/fields/ff_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>ff_Account_Id__c</fullName>
    <formula>ordexp_TAD_Order__r.ordexp_account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>