force-app/main/default/objects/order_line_item__c/fields/ff_PerQTY_PAX_Count__c.field-meta.xml
<CustomField>
    <fullName>ff_PerQTY_PAX_Count__c</fullName>
    <formula>VALUE(Text( Quantity__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PerQTY/PAX Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>