force-app/main/default/objects/order_line_item__c/fields/General_Pricing__c.field-meta.xml
<CustomField>
    <fullName>General_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Pricing</label>
    <referenceTo>General_Pricing__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>