force-app/main/default/objects/order_line_item__c/fields/GP_Dep_City__c.field-meta.xml
<CustomField>
    <fullName>GP_Dep_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GP Dep City</label>
    <referenceTo>General_Pricing__c</referenceTo>
    <relationshipLabel>Order Line Items (GP Dep City)</relationshipLabel>
    <relationshipName>Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>