force-app/main/default/objects/order_line_item__c/fields/Includes_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Includes_Commission_Amount__c</fullName>
    <formula>Total_OLI_Commission__c &lt;&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Includes Commission Amount</label>
    <type>Checkbox</type>
</CustomField>