force-app/main/default/objects/order_line_item__c/fields/Information_Arrive_Early__c.field-meta.xml
<CustomField>
    <fullName>Information_Arrive_Early__c</fullName>
    <label>Information Arrive Early</label>
    <length>100</length>
    <type>Text</type>
</CustomField>