force-app/main/default/objects/order_line_item__c/fields/Information_Post_Stopover__c.field-meta.xml
<CustomField>
    <fullName>Information_Post_Stopover__c</fullName>
    <label>Information Post Stopover</label>
    <length>100</length>
    <type>Text</type>
</CustomField>