force-app/main/default/objects/order_line_item__c/fields/Information_Pre_StopOver__c.field-meta.xml
<CustomField>
    <fullName>Information_Pre_StopOver__c</fullName>
    <label>Information Pre StopOver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>