force-app/main/default/objects/order_line_item__c/fields/Initial_HSS_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_HSS_Amount__c</fullName>
    <label>Initial HSS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>