force-app/main/default/objects/order_line_item__c/fields/Is_Expedia_OLI__c.field-meta.xml
<CustomField>
    <fullName>Is_Expedia_OLI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expedia OLI</label>
    <type>Checkbox</type>
</CustomField>