force-app/main/default/objects/order_line_item__c/fields/Is_Margin_In_Range__c.field-meta.xml
<CustomField>
    <fullName>Is_Margin_In_Range__c</fullName>
    <formula>IF( ((Deal__r.Estimated_Weighted_Margin__c - 0.05 ) &lt;= OLI_Margin__c) &amp;&amp; ( OLI_Margin__c &lt;=(Deal__r.Estimated_Weighted_Margin__c + 0.05 )) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Margin In Range</label>
    <type>Checkbox</type>
</CustomField>