force-app/main/default/objects/order_line_item__c/fields/Is_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Is_Migrated__c</fullName>
    <formula>ordexp_TAD_Order__r.Converted_from_Legacy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Migrated?</label>
    <type>Checkbox</type>
</CustomField>