force-app/main/default/objects/order_line_item__c/fields/isSplit__c.field-meta.xml
<CustomField>
    <fullName>isSplit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSplit</label>
    <type>Checkbox</type>
</CustomField>