force-app/main/default/objects/order_line_item__c/fields/Itinerary_Level__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Level__c</fullName>
    <defaultValue>&apos;OLI&apos;</defaultValue>
    <label>Itinerary Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OLI</fullName>
            </value>
            <value>
                <fullName>PAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>