force-app/main/default/objects/order_line_item__c/fields/Journal_Records_Create__c.field-meta.xml
<CustomField>
    <fullName>Journal_Records_Create__c</fullName>
    <label>Journal Records Create</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial/Post Sale</fullName>
            </value>
            <value>
                <fullName>Cancellation Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>