force-app/main/default/objects/order_line_item__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <formula>Sub_Options__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Description</label>
    <type>Text</type>
</CustomField>