force-app/main/default/objects/order_line_item__c/fields/MergeB__c.field-meta.xml
<CustomField>
    <fullName>MergeB__c</fullName>
    <label>MergeB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>