force-app/main/default/objects/order_line_item__c/fields/MergeC__c.field-meta.xml
<CustomField>
    <fullName>MergeC__c</fullName>
    <label>MergeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>