force-app/main/default/objects/order_line_item__c/fields/NCAT_Tribunal__c.field-meta.xml
<CustomField>
    <fullName>NCAT_Tribunal__c</fullName>
    <label>NCAT/Tribunal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Received</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Resolved at Mediation</fullName>
            </value>
            <value>
                <fullName>Proceed to Hearing</fullName>
            </value>
            <value>
                <fullName>Resolved at hearing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>