force-app/main/default/objects/order_line_item__c/fields/Offer_Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Valid_Date__c</fullName>
    <label>Today&apos;s Offer Valid Date</label>
    <type>Date</type>
</CustomField>