force-app/main/default/objects/order_line_item__c/fields/OL_Cost__c.field-meta.xml
<CustomField>
    <fullName>OL_Cost__c</fullName>
    <label>OL Cost</label>
    <summarizedField>order_line_POE__c.Gross_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>order_line_POE__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>order_line_POE__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>