force-app/main/default/objects/order_line_item__c/fields/OLI_Cancellation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>OLI_Cancellation_Percentage__c</fullName>
    <formula>(((ordexp_oli_CanAmount__c) * 100) / (ordexp_suboption_amount__c + Total_surcharge__c + HSS_Amount__c + ordexp_city_surcharge_amount__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLI Cancellation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>