force-app/main/default/objects/order_line_item__c/fields/OLI_Cancelled_On__c.field-meta.xml
<CustomField>
    <fullName>OLI_Cancelled_On__c</fullName>
    <label>OLI Cancelled On</label>
    <type>Date</type>
</CustomField>