force-app/main/default/objects/order_line_item__c/fields/OLI_Commission__c.field-meta.xml
<CustomField>
    <fullName>OLI_Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OLI Commission</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>