force-app/main/default/objects/order_line_item__c/fields/OLI_Coupon_Applied__c.field-meta.xml
<CustomField>
    <fullName>OLI_Coupon_Applied__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OLI Coupon Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>