force-app/main/default/objects/order_line_item__c/fields/OLI_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>OLI_Credit_Amount__c</fullName>
    <label>OLI Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>