force-app/main/default/objects/order_line_item__c/fields/OLI_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>OLI_GST_Amount__c</fullName>
    <formula>IF((ordexp_TAD_Order__r.RecordType.Name==&apos;TAD&apos; || ordexp_TAD_Order__r.RecordType.Name==&apos;TC&apos;), 
IF(TEXT(Deal__r.GST_AU__c)=&apos;GST free&apos;,0,
IF(TEXT(Deal__r.GST_AU__c)=&apos;GST on commission&apos;,(ff_OLI_Total_Amount_Currency__c - OL_Cost__c)/11,
IF(TEXT(Deal__r.GST_AU__c)=&apos;GST on Total Amount&apos;,(ff_OLI_Total_Amount_Currency__c)/11,0))), 
IF(TEXT(Deal__r.GST_NZ__c)=&apos;GST free&apos;,0,
IF(TEXT(Deal__r.GST_NZ__c)=&apos;GST on commission&apos;,(ff_OLI_Total_Amount_Currency__c - OL_Cost__c)*(3/23),
IF(TEXT(Deal__r.GST_NZ__c)=&apos;GST on Total Amount&apos;,(ff_OLI_Total_Amount_Currency__c)*(3/23),0))))</formula>
    <label>OLI GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>