force-app/main/default/objects/order_line_item__c/fields/OLI_Margin__c.field-meta.xml
<CustomField>
    <fullName>OLI_Margin__c</fullName>
    <formula>((orderxp_total_amount__c - OL_Cost__c ) / orderxp_total_amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLI Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>