force-app/main/default/objects/order_line_item__c/fields/OLI_Price__c.field-meta.xml
<CustomField>
    <fullName>OLI_Price__c</fullName>
    <formula>ordexp_suboption_amount__c + ordexp_city_surcharge_amount__c +Total_surcharge__c+on_hss_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLI Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>