force-app/main/default/objects/order_line_item__c/fields/OLI_Unique__c.field-meta.xml
<CustomField>
    <fullName>OLI_Unique__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLI Unique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>