force-app/main/default/objects/order_line_item__c/fields/Open_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Credit_Amount__c</fullName>
    <formula>(  ordexp_Total_OLI_Net_Amount__c  ) - (  PAX_Qty__c  *  Open_Credit_Supplier_Fee__c )</formula>
    <label>Open Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>