force-app/main/default/objects/order_line_item__c/fields/Open_Credit_Supplier_Fee__c.field-meta.xml
<CustomField>
    <fullName>Open_Credit_Supplier_Fee__c</fullName>
    <label>Open Credit Supplier Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>